--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   justify-content: center;
 }
 
-.question {
+#question {
   font-size: 5rem;
 }
 
@@ -20,15 +20,17 @@
   margin: 35px;
 }
 
-.button {
+.answerBtn {
   width: 100%;
   height: 5rem;
   border-radius: 8px;
   border: none;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .button:hover {
-  background-color: darkgray;
+  background-color: darken;
 }
 
 .next_button_container {
@@ -40,4 +42,14 @@
   width: 5rem;
   border-radius: 8px;
   border: none;
+}
+
+/* Farben anzeigen wenn korrekt oder inkorrekt */
+
+.correct {
+  background-color: green;
+}
+
+.incorrect {
+  background-color: red;
 }
